=== HEAD

* Add Database#fetch_size accessor and :fetch_size option to jdbc adapter, for setting JDBC Statement fetch size (jeremyevans)

* Automatically determine array type in pg_array_associations plugin, explicitly cast arrays in more places (jeremyevans, maccman) (#800)

* Speed up Dataset#literal for symbols 60% by caching results, speeding up dataset literalization up to 40% or more (jeremyevans)

* Speed up Sequel.split_symbol 10-20x by caching results, speeding up dataset literalization up to 80% or more (jeremyevans)

* Speed up dataset literalization for simple datasets by up to 100% (jeremyevans)

* Support :fractional_seconds Database option on MySQL 5.6.5+ to support fractional seconds by default (jeremyevans) (#797)

* Work around MySQL 5.6+ bug when combining DROP FOREIGN KEY and DROP INDEX in same ALTER TABLE statement (jeremyevans)

* Make auto_validations plugin handle models that select from subqueries (jeremyevans)

* Recognize additional disconnect errors in the postgres adapter (jeremyevans)

* Make import/multi_insert insert multiple rows in a single query using a UNION on Oracle, DB2, and Firebird (jeremyevans)

* Speed up association_pks many_to_many setter method by using Dataset#import (jeremyevans)

* Add Model.prepared_finder, similar to .finder but using a prepared statement (jeremyevans)

* Model.def_{add_method,association_dataset_methods,remove_methods} are now deprecated (jeremyevans)

* Model.eager_loading_dataset and Model.apply_association_dataset_opts are now deprecated (jeremyevans)

* Make prepared_statement_associations plugin handle one_through_one and one_through_many associations (jeremyevans)

* Use placeholder literalizer for regular association loading for up to 85% speedup (jeremyevans)

* Use placeholder literalizer for eager association loading for up to 20% speedup (jeremyevans)

* Make Model#marshallable! work correctly when using the tactical_eager_loading plugin (jeremyevans)
